Add HTTP demo